{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 40,
  "lineage": "08bf539d-6115-8161-6a7c-3576b9d15ede",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/Internal/8c4f11520cb25037",
            "arn_suffix": "app/Internal/8c4f11520cb25037",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Internal-1201191483.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/Internal/8c4f11520cb25037",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Internal",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fe1120785d395758"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e5c88523625298ac"
              },
              {
                "subnet_id": "subnet-0ef2a4064de965d5f"
              }
            ],
            "subnets": [
              "subnet-0e5c88523625298ac",
              "subnet-0ef2a4064de965d5f"
            ],
            "vpc_id": "vpc-07952f9c0e0703007",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/Internal/8c4f11520cb25037"
          },
          "dependencies": [
            "module.Subnets.aws_subnet.Private_one",
            "module.Subnets.aws_subnet.Private_two",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internet_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/ALB/ec825e0c3890a6e7",
            "arn_suffix": "app/ALB/ec825e0c3890a6e7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-25618380.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/ALB/ec825e0c3890a6e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fe1120785d395758"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09937d0e983ab8b5c"
              },
              {
                "subnet_id": "subnet-0f993ce58d406a8d8"
              }
            ],
            "subnets": [
              "subnet-09937d0e983ab8b5c",
              "subnet-0f993ce58d406a8d8"
            ],
            "vpc_id": "vpc-07952f9c0e0703007",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/ALB/ec825e0c3890a6e7"
          },
          "dependencies": [
            "module.Subnets.aws_subnet.Public_one",
            "module.Subnets.aws_subnet.Public_two",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_ls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:listener/app/Internal/8c4f11520cb25037/2921f7d2a43d5ee4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:listener/app/Internal/8c4f11520cb25037/2921f7d2a43d5ee4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/Internal/8c4f11520cb25037",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb.internal_lb",
            "module.ALB.aws_lb_target_group.internal_tg",
            "module.Subnets.aws_subnet.Private_one",
            "module.Subnets.aws_subnet.Private_two",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internet_ls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:listener/app/ALB/ec825e0c3890a6e7/ed2e1437f39b2431",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:listener/app/ALB/ec825e0c3890a6e7/ed2e1437f39b2431",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:loadbalancer/app/ALB/ec825e0c3890a6e7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb.internet_lb",
            "module.ALB.aws_lb_target_group.internet_tg",
            "module.Subnets.aws_subnet.Public_one",
            "module.Subnets.aws_subnet.Public_two",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b",
            "arn_suffix": "targetgroup/group2/49d1286ddf41012b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "group2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internet_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f",
            "arn_suffix": "targetgroup/group1/d0ef367d3fd77f9f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "group1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b-20250718192243335600000008",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b",
            "target_id": "i-0e064de5729b4c30d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb_target_group.internal_tg",
            "module.Subnets.aws_subnet.Private_one",
            "module.Subnets.aws_subnet.Private_two",
            "module.instances.aws_instance.ec2_private1",
            "module.instances.aws_instance.ec2_private2",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b-20250718192243335600000009",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group2/49d1286ddf41012b",
            "target_id": "i-0a8b1cf3309ef7787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb_target_group.internal_tg",
            "module.Subnets.aws_subnet.Private_one",
            "module.Subnets.aws_subnet.Private_two",
            "module.instances.aws_instance.ec2_private1",
            "module.instances.aws_instance.ec2_private2",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internet_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f-20250718192236093000000007",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f",
            "target_id": "i-01b1670e553926157"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb_target_group.internet_tg",
            "module.Subnets.aws_subnet.Public_one",
            "module.Subnets.aws_subnet.Public_two",
            "module.instances.aws_instance.ec2_public1",
            "module.instances.aws_instance.ec2_public2",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f-20250718192236093000000006",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905666609311:targetgroup/group1/d0ef367d3fd77f9f",
            "target_id": "i-0a7cd773b1d39d79a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb_target_group.internet_tg",
            "module.Subnets.aws_subnet.Public_one",
            "module.Subnets.aws_subnet.Public_two",
            "module.instances.aws_instance.ec2_public1",
            "module.instances.aws_instance.ec2_public2",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:subnet/subnet-0e5c88523625298ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5c88523625298ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905666609311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:subnet/subnet-0ef2a4064de965d5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef2a4064de965d5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905666609311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:subnet/subnet-09937d0e983ab8b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09937d0e983ab8b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905666609311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:subnet/subnet-0f993ce58d406a8d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f993ce58d406a8d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905666609311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01dd5f7dda5e8bb39",
            "arn": "arn:aws:ec2:us-east-1:905666609311:instance/i-0e064de5729b4c30d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e064de5729b4c30d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023285cd04048e669",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0bbe6e740bc55863d",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5c88523625298ac",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe1120785d395758"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Private_one",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01dd5f7dda5e8bb39",
            "arn": "arn:aws:ec2:us-east-1:905666609311:instance/i-0a8b1cf3309ef7787",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8b1cf3309ef7787",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034d8c9fff1572d06",
            "private_dns": "ip-10-0-3-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.44",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0cecd819b57a3dfe6",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef2a4064de965d5f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe1120785d395758"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Private_two",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01dd5f7dda5e8bb39",
            "arn": "arn:aws:ec2:us-east-1:905666609311:instance/i-01b1670e553926157",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b1670e553926157",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046b52d5da78923e4",
            "private_dns": "ip-10-0-0-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.163",
            "public_ip": "3.81.70.227",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-05e127e5ac5b425bf",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09937d0e983ab8b5c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe1120785d395758"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Public_one",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01dd5f7dda5e8bb39",
            "arn": "arn:aws:ec2:us-east-1:905666609311:instance/i-0a7cd773b1d39d79a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7cd773b1d39d79a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0003d122dd0b56ee3",
            "private_dns": "ip-10-0-2-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.230",
            "public_ip": "44.192.2.179",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ee1e2f88e2d75d92",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f993ce58d406a8d8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe1120785d395758"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Public_two",
            "module.instances.data.aws_ami.amazon_linux_2",
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012c7acd34d748675",
            "arn": "arn:aws:ec2:us-east-1:905666609311:elastic-ip/eipalloc-012c7acd34d748675",
            "domain": "vpc",
            "id": "eipalloc-012c7acd34d748675",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-217-109-241.compute-1.amazonaws.com",
            "public_ip": "3.217.109.241",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:internet-gateway/igw-0d6f47e4e5de62205",
            "id": "igw-0d6f47e4e5de62205",
            "owner_id": "905666609311",
            "region": "us-east-1",
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012c7acd34d748675",
            "association_id": "eipassoc-0c4de2c70d200f37f",
            "connectivity_type": "public",
            "id": "nat-04fdc745c16fe2ded",
            "network_interface_id": "eni-0729899a6f4e1f4e8",
            "private_ip": "10.0.0.152",
            "public_ip": "3.217.109.241",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09937d0e983ab8b5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Public_one",
            "module.routing.aws_eip.my_eip",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d6f47e4e5de62205",
            "id": "r-rtb-0e228583a1dfc41a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e228583a1dfc41a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.routing.aws_internet_gateway.gw",
            "module.routing.aws_route_table.shared_public",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6c0efabd347ee551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04fdc745c16fe2ded",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6c0efabd347ee55",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Public_one",
            "module.routing.aws_eip.my_eip",
            "module.routing.aws_nat_gateway.my_nat",
            "module.routing.aws_route_table.shared_private",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:route-table/rtb-0f6c0efabd347ee55",
            "id": "rtb-0f6c0efabd347ee55",
            "owner_id": "905666609311",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:route-table/rtb-0e228583a1dfc41a2",
            "id": "rtb-0e228583a1dfc41a2",
            "owner_id": "905666609311",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6f47e4e5de62205",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0217154a47b3efe6c",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6c0efabd347ee55",
            "subnet_id": "subnet-0e5c88523625298ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Private_one",
            "module.routing.aws_route_table.shared_private",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb6895a498a4d78",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6c0efabd347ee55",
            "subnet_id": "subnet-0ef2a4064de965d5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Private_two",
            "module.routing.aws_route_table.shared_private",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4bce521701a5b9",
            "region": "us-east-1",
            "route_table_id": "rtb-0e228583a1dfc41a2",
            "subnet_id": "subnet-09937d0e983ab8b5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Public_one",
            "module.routing.aws_route_table.shared_public",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009e3767065512c4d",
            "region": "us-east-1",
            "route_table_id": "rtb-0e228583a1dfc41a2",
            "subnet_id": "subnet-0f993ce58d406a8d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Subnets.aws_subnet.Public_two",
            "module.routing.aws_route_table.shared_public",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:security-group/sg-0fe1120785d395758",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe1120785d395758",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "905666609311",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07952f9c0e0703007"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:security-group-rule/sgr-0a79cb211aa8a5c33",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a79cb211aa8a5c33",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fe1120785d395758",
            "security_group_rule_id": "sgr-0a79cb211aa8a5c33",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:security-group-rule/sgr-0f4358e12cab852ef",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f4358e12cab852ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fe1120785d395758",
            "security_group_rule_id": "sgr-0f4358e12cab852ef",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:security-group-rule/sgr-0b6f925caba36575d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b6f925caba36575d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fe1120785d395758",
            "security_group_rule_id": "sgr-0b6f925caba36575d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.allow_http_ssh",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905666609311:vpc/vpc-07952f9c0e0703007",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec72f1436eff9daa",
            "default_route_table_id": "rtb-0010abe41c5b4b1b6",
            "default_security_group_id": "sg-02e8a05e5d1914ba5",
            "dhcp_options_id": "dopt-069366a96ebed6b25",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07952f9c0e0703007",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0010abe41c5b4b1b6",
            "owner_id": "905666609311",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}